--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,1 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;800&display=swap');
+
 @import './base.css';
+
+:root {
+  --color-primary-red: hsl(1, 90%, 64%);
+  --color-primary-blue: hsl(219, 85%, 26%);
+  --color-white: hsl(0, 0%, 100%);
+  --color-very-light-grayish-blue: hsl(210, 60%, 98%);
+  --color-light-grayish-blue-1: hsl(211, 68%, 94%);
+  --color-light-grayish-blue-2: hsl(205, 33%, 90%);
+  --color-grayish-blue: hsl(219, 14%, 63%);
+  --color-dark-grayish-blue: hsl(219, 12%, 42%);
+  --color-very-dark-blue: hsl(224, 21%, 14%);
+}
+
+body {
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-size: 1.6rem;
+}
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
