--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -7,17 +7,19 @@
   --color-primary-blue: hsl(219, 85%, 26%);
   --color-white: hsl(0, 0%, 100%);
   --color-very-light-grayish-blue: hsl(210, 60%, 98%);
-  --color-light-grayish-blue-1: hsl(211, 68%, 94%);
-  --color-light-grayish-blue-2: hsl(205, 33%, 90%);
+  --color-light-grayish-blue-1: rgb(229, 239, 250);
+  --color-light-grayish-blue-2: rgb(221, 231, 238);
   --color-grayish-blue: hsl(219, 14%, 63%);
   --color-dark-grayish-blue: hsl(219, 12%, 42%);
   --color-very-dark-blue: hsl(224, 21%, 14%);
+  --color-snow: #e4eaf0;
 }
 
 body {
   font-family: "Plus Jakarta Sans", sans-serif;
   font-size: 1.6rem;
   font-weight: 500;
+  background-color: var(--color-light-grayish-blue-1);
 }
 
 .attribution {
@@ -39,4 +41,14 @@ body {
 
 .main {
   flex: 1;
+}
+
+@media only screen and (width >=1024px) {
+  #app {
+    justify-content: center;
+  }
+
+  .main {
+    flex: initial;
+  }
 }
